estilos en el componente <RegisterScreen />

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,7 +4,9 @@
 
 //Components
 @import './components/auth';
-@import './components/buttons.scss';
+@import './components/buttons';
+@import './components/links';
+
 
 
 
