--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,7 @@
 @import './components/buttons';
 @import './components/links';
 @import './components/journal';
+@import './components/nothing';
 
 
 
