Cracion de componente <NoteAppBar />, el cual sirve para saber cuando tenemos alguna nota seleccionada o estamos creando una nueva

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@
 @import './components/links';
 @import './components/journal';
 @import './components/nothing';
+@import './components/notes';
 
 
 
