--- a/src/styles/components/_notes.scss
+++ b/src/styles/components/_notes.scss
@@ -13,3 +13,39 @@
     justify-content: space-between;
     padding: 10px 20px 10px 20px;
 }
+
+.notes__content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 20px;
+}
+
+.notes__title-input, .notes__textarea {
+    border: none;
+
+    &:focus {
+       outline: none; 
+    }
+}
+
+.notes__title-input {
+    color: $dark-grey;
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 2px;
+}
+
+.notes__textarea {
+    border: 1px solid black;
+    color: $dark-grey;
+    font-size: 20px;
+    flex: 1 1 auto;
+    resize: none;
+    border: none;
+}
+
+.notes__image img{
+    box-shadow: 5px 5px $dark-grey;
+    height: 150px;
+}
