mantener el estado de la autenticacion al recargar

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -78,3 +78,9 @@
         background: $button-active-blue;
     }
 }
+
+    button[type=submit]:disabled {
+
+        cursor: not-allowed;
+    
+    }
