--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,9 @@
 
+
 @import './base/settings';
 @import './base/base';
+@import './base/breakpoints';
+
 
 //Components
 @import './components/auth';
@@ -9,9 +12,5 @@
 @import './components/journal';
 @import './components/nothing';
 @import './components/notes';
-
-
-
-
-
+@import './components/ui';
 
